--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
         }
     </style>
     <script src="lib/jquery-1.11.3.min.js"></script>
-    <script src="src/mc-placeholder.js"></script>
+    <script src="build/mc-placeholder.min.js"></script>
     <script>
         $(function() {
             $(document.body).mcPlaceholder();
