--- a/demo.html
+++ b/demo.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
+        body {
+            margin: 0;
+            padding: 0 10px;
+        }
         input {
             padding: 5px;
+            width: 200px;
+        }
+        .center-div {
+            width: 500px;
+            margin: 0 auto;
+            border: 1px solid #aaaaaa;
+            text-align: center;
+            padding: 10px;
         }
     </style>
     <script src="lib/jquery-1.11.3.min.js"></script>
-    <script src="build/mc-placeholder.min.js"></script>
+    <script src="src/mc-placeholder.js"></script>
     <script>
         $(function() {
             $(document.body).mcPlaceholder();
@@ -17,7 +29,28 @@
     </script>
 </head>
 <body>
-<input type="text" placeholder="你的姓名"/>
-<input type="password" placeholder="你的密码"/>
+<h1>mcPlaceholder</h1>
+
+<form action="">
+    <table>
+        <tbody>
+        <tr>
+            <td><label for="name">Name:</label></td>
+            <td><input type="text" id="name" placeholder="Your name"/></td>
+        </tr>
+        <tr>
+            <td><label for="password">Password:</label></td>
+            <td><input type="password" id="password" placeholder="Your password"/></td>
+        </tr>
+        <tr>
+            <td><label for="age">Age:</label></td>
+            <td><input type="text" id="age" placeholder="Your age"/></td>
+        </tr>
+        </tbody>
+    </table>
+</form>
+<div class="center-div">
+    Input with center align: <input type="text" placeholder="click me"/>
+</div>
 </body>
 </html>
