change background to transparent instead of input bg color

--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
             width: 200px;
         }
         .center-div {
-            width: 500px;
+            width: 600px;
             margin: 0 auto;
             border: 1px solid #aaaaaa;
             text-align: center;
@@ -50,7 +50,8 @@
     </table>
 </form>
 <div class="center-div">
-    Input with center align: <input type="text" placeholder="click me"/>
+    Input with center align and background:
+    <input type="text" placeholder="click me" style="background-image: url(images/btn-bg.png);"/>
 </div>
 </body>
 </html>
